--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,3 +3,19 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* // LOGIN FORM \\ */
+#loginForm{
+    width: 250px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: auto;
+}
+#loginForm input{
+    padding: 8px;
+    font-size: 20px;
+}
+#loginForm h1{
+    font-size: 50px;
+}
